add homepage that displays topic titles

--- a/app/views/new_topic.erb
+++ b/app/views/new_topic.erb
@@ -1,4 +1,4 @@
-<form action = "/new_thread" method = "post">
+<form action = "/new_topic" method = "post">
   <input type = "text" name = "title">
   <input type = "text" name = "body">
   <input type = "submit">
