Build Topic Display Page

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,7 +1,11 @@
+<form action = '/new_topic'>
+  <input type = 'submit' value = 'Add something Disscuss{ting}'>
+</form>
+
 <% @topics.each do |topic| %>
   <article>
     <p>
-      <%= topic.title %>
+      <a href="/<%= topic.id %>"><%= topic.title %></a>
     </p>
   </article>
 <% end %>
