--- a/app/views/new_topic.erb
+++ b/app/views/new_topic.erb
@@ -1,5 +1,7 @@
-<form action = "/new_topic" method = "post">
-  <input type = "text" name = "title">
-  <input type = "text" name = "body">
+<form action = "/new_topic" method = "post"> 
+  <input type = "text" name = "title" value = 'Title'>
+  <br>
+  <textarea rows = '4' cols = '40' name = "body"></textarea>
+  <br>
   <input type = "submit">
 </form>
