added navbar to layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-  <a href = '/'><h1>Disscuss{ting}.ly</h1></a>
-  <%= yield %>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+  </head>
+  
+  <body>
+    <%= erb :navbar %>
+    <%= yield %>
+  </body>
 </html>
