--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,4 +1,4 @@
-<form action='/login' method='post'>
+<form action='/signup' method='post'>
   <input type='email' value='email' name='email'></br>
   <input type='password' value='password' name='password'></br>
   <input type='submit'>
