submit/comment button not available to guest user

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,6 +1,8 @@
-<form action = '/new_topic'>
-  <input type = 'submit' value = 'Add something Disscuss{ting}'>
-</form>
+<% if logged_in? %>
+  <form action = '/new_topic'>
+    <input type = 'submit' value = 'Add something Disscuss{ting}'>
+  </form>
+<% end %>
 
 <% @topics.each do |topic| %>
   <article>
