updated view to reflect whether user is logged in

--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -3,8 +3,8 @@
   <a href = '/'><h1>Disscuss{ting}.ly</h1></a>
   <nav>
     <ul class="pull-right">
-      <% if @user %>
-        Welcome, <a href="/user/<%=@user.name%>"><%=@user.name%></a>. <a href="/logout">Log out?</a>
+      <% if logged_in? %>
+        Welcome, <a href="/user/<%=current_user.id%>"><%=current_user.email%></a>. <a href="/logout">Log out?</a>
       <% else %>
         Have an account? <a href="/login">Log in</a> or <a href="/signup">Sign up</a>
       <% end %>
