add author's email alongside topic title

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -7,9 +7,7 @@
 <% @topics.each do |topic| %>
   <article>
     <p>
-      <a href="/topic/<%= topic.id %>"><%= topic.title %></a>
+      <a href="/topic/<%= topic.id %>"><%= topic.title %></a> [<%=topic.author.email %>]
     </p>
   </article>
 <% end %>
-
-<input type='submit' method='post' action='/logout' value='Logout'>
