view displays nested comments

--- a/app/views/topic.erb
+++ b/app/views/topic.erb
@@ -1,10 +1,16 @@
 <% if @topic %>
     <h2><%= @topic.title %></h2>
     <p><%= @topic.body %></p>
-    <% @comments.each do |comment| %>
+    <% @comment_hash.each do |parent, children| %>
       <p>
-        <i>Comment by <%= comment.author.email %></i></br>
-        <%= comment.body %>
+        <i>Parent Comment by <%= parent.author.email %></i></br>
+        <%= parent.body %></br>     
+        <% unless children.empty? %>
+          <% children.each do |child| %>
+            <i>Child Comment by <%= child.author.email %></i></br>
+            <%= child.body %></br>
+          <% end %>
+        <% end %>
       </p>
     <% end %>
     <% if logged_in? %>
