reply link for each topic comment

--- a/app/views/_comments.erb
+++ b/app/views/_comments.erb
@@ -1,16 +1,13 @@
  <% @comment_hash.each do |parent, children| %>
       <p>
         <div class="parent-comment">
-          <i>Parent Comment by <%= parent.author.email %> <a href="/comment/<%= parent.id %>">link</a></i></br>
+          <i>Parent comment by <%= parent.author.email %> <a href="/comment/<%= parent.id %>">reply</a></i></br>
           <%= parent.body %></br>
-            <form action='/comment/<%= parent.id %>'>
-              <input type='submit' value='Reply'>
-            </form>
         </div>
         <div class"child-comment">     
           <% unless children.empty? %>
             <% children.each do |child| %>
-              <i>Child Comment by <%= child.author.email %> <a href="/comment/<%= child.id %>">link</a></i></br>
+              <i>Child comment by <%= child.author.email %> <a href="/comment/<%= child.id %>"><strike>reply</strike></a></i></br>
               <%= child.body %></br>
             <% end %>
           <% end %>
