cleaned up html code formatting

--- a/app/views/topic.erb
+++ b/app/views/topic.erb
@@ -8,10 +8,9 @@
       </p>
     <% end %>
     <% if logged_in? %>
-      <form method = "post">
-        <textarea rows = '4' cols = '40' name = 'body'></textarea>
-       <br>
-       <input type = 'submit'>
+      <form method="post">
+        <textarea rows='4' cols='40' name='body'></textarea><br>
+        <input type='submit'>
       </form>
     <% end %>
 <% else %>
