--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/css/app.css">
     <meta charset="UTF-8">
     <title>Document</title>
   </head>
   
   <body>
     <%= erb :navbar %>
-    <%= yield %>
+    <div class='container'
+      <%= yield %>
+    </div>
   </body>
+
 </html>
