stylesheet linked up, begin styling navbar

--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,19 @@
+.navbar{
+}
+
+.pull-right{
+  position:absolute;
+  top:0px;
+}
+
 .container {
-  
+
+}
+
+.parent-comment {
+
+}
+
+.child-comment {
+
 }
