--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" type="text/css" href="/app.css">
     <meta charset="UTF-8">
     <title>Document</title>
   </head>
