some basic container styling

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,8 +8,8 @@
   
   <body>
     <%= erb :navbar %>
-    <div class='container'
-      <%= yield %>
+    <div class='container'>
+    <%= yield %>
     </div>
   </body>
 
