tweaking it to death

--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -7,6 +7,9 @@
         <form action='/logout' method='post'>
             <input type='submit' value='Log out'/>
         </form>
+        <form action='/new_topic'>
+            <input type='submit' value='Add something Disscuss{ting}'>
+        </form>
       <% else %>
         Have an account? <a href="/login">Log in</a> or <a href="/signup">Sign up</a>
       <% end %>
